# amplifier-module-provider-azure-openai

./: README.md  pyproject.toml
amplifier_module_provider_azure_openai/: __init__.py
tests/: test_behavioral.py  test_validation.py
