[project]
name = "amplifier-module-provider-azure-openai"
version = "1.0.0"
description = "Azure OpenAI integration for Amplifier"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]
dependencies = [
    "azure-identity>=1.25.1",
    "openai>=1.0.0",
]

[project.entry-points."amplifier.modules"]
provider-azure-openai = "amplifier_module_provider_azure_openai:mount"

[project.optional-dependencies]
azure = [
    "azure-identity>=1.15.0",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_provider_azure_openai",
]

[tool.hatch.metadata]
allow-direct-references = true
